# myself-as-a-site

./: .gitignore  Makefile  pyproject.toml  vercel.json
hugo-resources/: config.toml  go.mod
myself_as_a_site/: app.py  const.py
